--- a/index.html
+++ b/index.html
@@ -59,8 +59,12 @@
 	  <h1 class='bkg fragment'>Fitness is a statistical variable</h1>
 	</section>
 
+	<section><h1>Uncertainty might be like this</h1>
+	  <img src='https://farm5.staticflickr.com/4113/5056343170_6e6de4d540_o_d.jpg' alt='Gaussian'>
+	  <aside class='notes'>This is the usual approach to <em>noise</em>, thingking you have a normal distribution, which <em>widens</em> the perception of the crisp fitness.</aside>
+	</section>
 	
-	<section data-background='images/other-noise.jpg'>
+	<section data-background='images/other-noise.jpg'
 	  <section><h2>Usual approaches to uncertainty</h2>
 	    <h2 class='fragment bkg'>Implicit averaging</h2>
 	    <h2 class='fragment bkg'><em>Explicit</em> averaging</h2>
@@ -157,7 +161,8 @@
 <!-- credits -->
 <section>
   <h3>Credits</h3>
-  <ul><li><a href='https://www.flickr.com/photos/numberstumper/389666281/'>Death
+  <ul><li><a href='https://www.flickr.com/photos/lendra/5056343170/in/photolist-8GP5Ew-dn1LUE-hW2Jju-ZijvGh-7RhAed-5qbcE3-dn1sNP-qTyyyk-dn1w7h-dn1R6G-dn1Dfu-dn1Lqv-FT8sbd-dn1QoB-dn1PdD-8qzhNS-8391MT-9Q317h-83cbZ7-7ByADC-dn1PX9-dn1v4P-dn1vA5-9NDtMv-7DWLze-8393mD-84uJ4e-98AUEu-dn1ShH-82q1f4-7npeeC-dn1qkb-838ZoM-5q6TKz-ArMgD-efu1EL-9NC2JV-dn1DC8-82t9rb-dn1zof-Z8Pbio-9r6YPw-dn1Jpw-84uNQx-82taNd-dn1BmW-dn1tcS-dn1qqH-dn1Naj-dn1uoY'>Gaussian by Lendra Nurezki</a></li>
+    <li><a href='https://www.flickr.com/photos/numberstumper/389666281/'>Death
 	and taxes by Paul Stumpr</a></li>
     <li><a href="https://commons.wikimedia.org/wiki/File:Frechet_pdf.svg#/media/File:Frechet_pdf.svg">Frechet pdf</a>" by <a href="//commons.wikimedia.org/wiki/User:Arthena" title="User:Arthena">user:Arthena</a> - Self-made using python with numpy and matplotlib.. Licensed under <a title="GNU Free Documentation License" href="http://www.gnu.org/copyleft/fdl.html">GFDL</a> via <a href="https://commons.wikimedia.org/wiki/">Commons</a>.</li>
   </ul>
